# example-api-grpc

./: .gitignore  .pnp.cjs  .prettierrc.json  .pylintrc  Dockerfile.python-dev  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: dependabot.yml
escrow-service/: main.py  pyproject.toml  test_main.py
escrow-service-openapi/: Dockerfile  pyproject.toml
escrow-service-openapi/app/: main.py  test_main.py
escrow-service/app/: main.py
frontend/: package.json
frontend/pages/: projects.tsx
node-packages/frontend/: package.json
python-packages/escrow-service/: main.py  test_main.py
