[tool.poetry]
name = "wardship"
version = "0.1.0"
description = ""
authors = ["Kallan Gerard <36556982+kallangerard@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-multipart = "^0.0.5"
pytest = "^7.1.3"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
autoflake = "^1.6.1"
flake8 = "^5.0.4"
pytest = "^7.1.3"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.0.0"
mypy = "^0.981"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
