[tool.poetry]
name = "wardship"
version = "0.1.0"
description = ""
authors = ["Kallan Gerard <36556982+kallangerard@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
